--- a/client/src/HomePage/ChatApp.css
+++ b/client/src/HomePage/ChatApp.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
 }
@@ -94,4 +94,4 @@ h3 {
 }
 .text-divider span:after {
   left: 100%;
-}
+} */
